feat: add maven-javadoc-plugin configuration to pom.xml for Javadoc generation